tests/semantic/fail/function-7.tiger
let
	function a (a : int) = ()
in
	a ()
end
